$Id$
            
            [- Version 2.1.32 -]
2007-05-30: object.lisp: Replaced occurrence of 'multi-let' with
            'multiple-value-let', because 'multi-let' is not defined
            until a later file.
            debug.lisp: Replaced constant absent-dbg-entry* with a
            _pattern_ that defines a Dbg-entry as absent.  So far this
            makes little difference.

            [- Version 2.1.30 -]
2007-05-29: files.lisp: Stopped system from asking infuriating
            question about nonexistent files (in
            Code-file-chunk/derive-date).            

2007-05-27: object.lisp: Allowed 'def-op' to have :method-combination
            and :argument-precedence-order options, just as
            'defgeneric' does.

2007-05-20: object.lisp: Added kludgy convention for producing "blank"
            objects, i.e., objects that the standard 'initialize'
            method is never applied to.  This is for internal use
            only. 

            [- Version 2.1.29 2007/01/29 14:17:23 airfoyle Exp -]
2007-01-28: Added sanity check that 'forall' and 'exists' actually
            have vars.
            
            [- Version 2.1.28 2006/12/01 17:46:16 airfoyle Exp -]
2006-11-01: Moved 'gen-var' from multilet.lisp to util.lisp so it's
            available when multilet is slurped.

            [- Version 2.1.28 -]
2006-11-26: chunk.lisp: Expanded allowable time discrepancy for that
            elusive bug whereby some chunk deriver is returning dates
            before the current one.

            [- Version 2.1.27 2006/11/20 04:43:13 airfoyle Exp -]
2006-11-19: multilet.lisp: Convention for new variables changed: macro
            var bound to run-time var with name #:v-27 is v$ (not -v-,
            which looks too much like some kind of segment).
            
            debug.lisp: Fixed bug whereby all unlabeled values of forms
            were being discarded.  Now they are all saved, with names